tests/NormalTests/paczka1/fuzzy1/29463844.err
Error in line 8: Lk2tmKxO A205 221,61
Error in line 10: dml5 S716 40,8
Error in line 21: uyuCvf S716 86,8
Error in line 7: Lk2tmKxO A205 66,0
Error in line 25: dml5 A2 60,55
Error in line 22: uyuCvf A205 56,6
Error in line 12: 49247r S799 56,6
Error in line 34: 49247r A2 85,1
Error in line 32: FBhv9We6 A2 41,4
